# web-payments-connector

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE  LICENSE.md  MANIFEST.in  README.md  backends.html  django.html  doc_settings.py  genindex.html  index.html  install.html  modules.html  objects.inv  preauth.html  py-modindex.html  pyproject.toml  refund.html  search.html  searchindex.js  setup.py  test_settings.py  tox.ini  usage.html  web_payments.django.html  web_payments.html  web_payments_dummy.html  web_payments_externalpayments.html
.github/workflows/: test.yml
_modules/: functools.html  index.html  web_payments.html  web_payments_dummy.html  web_payments_externalpayments.html
_modules/web_payments/: _exceptions.html  django.html  forms.html  logic.html  utils.html  (+3 more)
_sources/: backends.rst.txt  refund.rst.txt  web_payments.rst.txt
doc/: conf.py  index.rst  install.rst  modules.rst  preauth.rst  refund.rst
docs/: Makefile  backends.rst  conf.py  django.rst  index.rst  install.rst  make.bat  modules.rst  preauth.rst  usage.rst  web_payments.django.rst  web_payments.rst  web_payments_dummy.rst  web_payments_externalpayments.rst
html/: objects.inv  refund.html
payments/: core.py
sphinx/: conf.py  index.rst  modules.rst  usage.rst
tests/: test_core.py  test_django.py  test_dummy.py  test_externalpayments.py
web_payments/: __init__.py  _exceptions.py  core.py  fields.py  forms.py  logic.py  status.py  test_core.py  testcommon.py  translation.py  utils.py
web_payments_dummy/: __init__.py  forms.py  test_dummy.py
web_payments_externalpayments/: __init__.py  forms.py  test_externalpayments.py  translation.py
(+45 files in other folders)
